fixed bug where descruption content would overflow outside container

--- a/src/cssModules/TallyExpense.module.css
+++ b/src/cssModules/TallyExpense.module.css
@@ -7,6 +7,7 @@
 
 .bottomWrapper > p {
   margin-top: 6px;
+  word-wrap: break-word;
 }
 
 .date {
